# Parallelization-of-Chaos-based-image-encryption

./: CMakeLists.txt  demo_licenta  image_XOR.cl  key.txt  main.c  mergeSort.cl
